# libone

./: .gitignore  AUTHORS  HACKING  Makefile.am  README.md  astyle.options  autogen.sh  buildnumber.sh  configure.ac  libone.pc.in  meson.build  meson_options.txt
.githooks/: pre-commit
docs/: Makefile.am  meson.build
docs/doxygen/: Makefile.am  doxygen.cfg  meson.build
inc/: Makefile.am
inc/libone/: Makefile.am  ONEDocument.h  libone.h
src/: Makefile.am
src/conv/: Makefile.am  meson.build
src/conv/raw/: .gitignore  Makefile.am  meson.build  one2raw.cpp  one2raw.rc.in  tags
src/conv/svg/: .gitignore  Makefile.am  meson.build  one2svg.cpp  one2svg.rc.in  tags
src/lib/: CompactID.cpp  CompactID.h  ExtendedGUID.cpp  ExtendedGUID.h  FileChunkReference.cpp  FileChunkReference.h  FileChunkReference32.cpp  FileChunkReference64.cpp  FileChunkReference64x32.cpp  FileDataStore.cpp  FileDataStore.h  FileNode.cpp  FileNode.h  FileNodeChunkReference.cpp  FileNodeChunkReference.h  FileNodeDescriptor.cpp  FileNodeDescriptor.h  FileNodeList.cpp  FileNodeList.h  FileNodeListFragment.cpp  FileNodeListFragment.h  FileNodefnd.h  GUID.cpp  GUID.h  Header.cpp  Header.h  JCID.cpp  JCID.h  Makefile.am  ONEDocument.cpp  Object.cpp  Object.h  ObjectDeclaration2Body.cpp  ObjectDeclaration2Body.h  ObjectDeclarationWithRefCountBody.cpp  ObjectDeclarationWithRefCountBody.h  ObjectGroup.cpp  ObjectGroup.h  ObjectInfoDependencyOverride32.cpp  ObjectInfoDependencyOverride32.h  (+36 more)
src/lib/FileNodeData/: DataSignatureGroupDefinitionFND.h  FileDataStoreListReferenceFND.cpp  FileDataStoreListReferenceFND.h  FileDataStoreObjectReferenceFND.cpp  FileDataStoreObjectReferenceFND.h  FileNodeData.h  GlobalIdTableEntry2FNDX.cpp  GlobalIdTableEntry2FNDX.h  GlobalIdTableEntry3FNDX.cpp  GlobalIdTableEntry3FNDX.h  GlobalIdTableEntryFNDX.cpp  GlobalIdTableEntryFNDX.h  GlobalIdTableStartFNDX.h  HashedChunkDescriptor2FND.cpp  HashedChunkDescriptor2FND.h  IFileNodeData.h  ObjectDataEncryptionKeyV2FNDX.cpp  ObjectDataEncryptionKeyV2FNDX.h  ObjectDeclaration2LargeRefCountFND.h  ObjectDeclaration2RefCountFND.cpp  ObjectDeclaration2RefCountFND.h  ObjectDeclarationFileData3LargeRefCountFND.h  ObjectDeclarationFileData3RefCountFND.cpp  ObjectDeclarationFileData3RefCountFND.h  ObjectDeclarationWithRefCount2FNDX.cpp  ObjectDeclarationWithRefCount2FNDX.h  ObjectDeclarationWithRefCountFNDX.cpp  ObjectDeclarationWithRefCountFNDX.h  ObjectGroupListReferenceFND.cpp  ObjectGroupListReferenceFND.h  ObjectGroupStartFND.cpp  ObjectGroupStartFND.h  ObjectInfoDependencyOverridesFND.h  ObjectRevisionWithRefCount2FNDX.cpp  ObjectRevisionWithRefCount2FNDX.h  ObjectRevisionWithRefCountFNDX.cpp  ObjectRevisionWithRefCountFNDX.h  ObjectSpaceManifestListReferenceFND.h  ObjectSpaceManifestListStartFND.cpp  ObjectSpaceManifestListStartFND.h  (+22 more)
src/lib/fileNodeData/: DataSignatureGroupDefinitionFND.cpp  DataSignatureGroupDefinitionFND.h  FileDataStoreListReferenceFND.cpp  FileDataStoreListReferenceFND.h  GlobalIdTableEntry2FNDX.h  GlobalIdTableEntry3FNDX.h  GlobalIdTableEntryFNDX.h  GlobalIdTableStartFNDX.cpp  HashedChunkDescriptor2FND.cpp  HashedChunkDescriptor2FND.h  IFileNodeData.cpp  ObjectDataEncryptionKeyV2FNDX.cpp  ObjectDataEncryptionKeyV2FNDX.h  ObjectDeclaration2LargeRefCountFND.cpp  ObjectDeclarationFileData3LargeRefCountFND.cpp  ObjectDeclarationWithRefCount2FNDX.h  ObjectGroupStartFND.h  ObjectInfoDependencyOverridesFND.cpp  ObjectSpaceManifestListReferenceFND.cpp  ObjectSpaceManifestListStartFND.h  ObjectSpaceManifestRootFND.cpp  ReadOnlyObjectDeclaration2RefCountFND.h  RevisionManifestListStartFND.h  RevisionManifestStart4FND.h  RevisionManifestStart6FND.h  RevisionManifestStart7FND.cpp  RevisionRoleAndContextDeclarationFND.cpp  RevisionRoleAndContextDeclarationFND.h  RevisionRoleDeclarationFND.h  RootObjectReference3FND.h  meson.build
src/test/: Makefile.am  meson.build  tags  test.cpp
src/test/common-types/: GUIDTest.cpp  GUIDTest.h
