## -*- Mode: make; tab-width: 4; indent-tabs-mode: tabs -*-

libone_source_files = [
    'CompactID.cpp',
    'CompactID.h',
    'Object.h',
    'Object.cpp',
    'PageMetaData.h',
    'PageMetaData.cpp',
    'ObjectGroup.h',
    'ObjectGroup.cpp',
    'ObjectSpace.cpp',
    'ObjectSpace.h',
    'ObjectSpaceStreams.cpp',
    'ObjectSpaceStreams.h',
    'ExtendedGUID.cpp',
    'ExtendedGUID.h',
    'FileChunkReference.h',
    'FileChunkReference.cpp',
    'FileNodeChunkReference.h',
    'FileNodeChunkReference.cpp',
    'FileDataStore.cpp',
    'FileDataStore.h',
    'FileNode.cpp',
    'FileNode.h',
    'FileNodeList.cpp',
    'FileNodeList.h',
    'FileNodeListFragment.cpp',
    'FileNodeListFragment.h',
    'Header.cpp',
    'Header.h',
    'JCID.h',
    'JCID.cpp',
    'OneNoteParser.h',
    'OneNoteParser.cpp',
    'PropertySet.h',
    'PropertySet.cpp',
    'PropertyID.h',
    'PropertyID.cpp',
    'Revision.cpp',
    'Revision.h',
    'TransactionEntry.h',
    'TransactionEntry.cpp',
    'TransactionLog.h',
    'TransactionLog.cpp',
    'TransactionLogFragment.h',
    'TransactionLogFragment.cpp',
    'GUID.cpp',
    'GUID.h',
    'ONEDocument.cpp',
    'StringInStorageBuffer.cpp',
    'StringInStorageBuffer.h',
    'libone_utils.cpp',
    'libone_types.h',
    'libone_utils.h',

	'ObjectDeclaration2Body.h',
	'ObjectDeclaration2Body.cpp',
	'ObjectDeclarationWithRefCountBody.h',
	'ObjectDeclarationWithRefCountBody.cpp',
	'ObjectInfoDependencyOverrideData.h',
	'ObjectInfoDependencyOverrideData.cpp',
	'ObjectInfoDependencyOverride32.h',
	'ObjectInfoDependencyOverride32.cpp',
	'ObjectInfoDependencyOverride8.cpp',
	'ObjectInfoDependencyOverride8.h',


	'fileNodeData/FileNodeData.h',
	'fileNodeData/IFileNodeData.h',
	'fileNodeData/IFileNodeData.cpp',
	'fileNodeData/DataSignatureGroupDefinitionFND.cpp',
	'fileNodeData/DataSignatureGroupDefinitionFND.h',
	'fileNodeData/FileDataStoreListReferenceFND.cpp',
	'fileNodeData/FileDataStoreListReferenceFND.h',
	'fileNodeData/FileDataStoreObjectReferenceFND.cpp',
	'fileNodeData/FileDataStoreObjectReferenceFND.h',
	'fileNodeData/GlobalIdTableEntry2FNDX.cpp',
	'fileNodeData/GlobalIdTableEntry2FNDX.h',
	'fileNodeData/GlobalIdTableEntry3FNDX.cpp',
	'fileNodeData/GlobalIdTableEntry3FNDX.h',
	'fileNodeData/GlobalIdTableEntryFNDX.cpp',
	'fileNodeData/GlobalIdTableEntryFNDX.h',
	'fileNodeData/GlobalIdTableStartFNDX.cpp',
	'fileNodeData/GlobalIdTableStartFNDX.h',
	'fileNodeData/HashedChunkDescriptor2FND.cpp',
	'fileNodeData/HashedChunkDescriptor2FND.h',
	'fileNodeData/ObjectDataEncryptionKeyV2FNDX.cpp',
	'fileNodeData/ObjectDataEncryptionKeyV2FNDX.h',
	'fileNodeData/ObjectDeclaration2LargeRefCountFND.cpp',
	'fileNodeData/ObjectDeclaration2LargeRefCountFND.h',
	'fileNodeData/ObjectDeclaration2RefCountFND.cpp',
	'fileNodeData/ObjectDeclaration2RefCountFND.h',
	'fileNodeData/ObjectDeclarationFileData3LargeRefCountFND.cpp',
	'fileNodeData/ObjectDeclarationFileData3LargeRefCountFND.h',
	'fileNodeData/ObjectDeclarationFileData3RefCountFND.cpp',
	'fileNodeData/ObjectDeclarationFileData3RefCountFND.h',
	'fileNodeData/ObjectDeclarationWithRefCount2FNDX.cpp',
	'fileNodeData/ObjectDeclarationWithRefCount2FNDX.h',
	'fileNodeData/ObjectDeclarationWithRefCountFNDX.cpp',
	'fileNodeData/ObjectDeclarationWithRefCountFNDX.h',
	'fileNodeData/ObjectGroupListReferenceFND.cpp',
	'fileNodeData/ObjectGroupListReferenceFND.h',
	'fileNodeData/ObjectGroupStartFND.cpp',
	'fileNodeData/ObjectGroupStartFND.h',
	'fileNodeData/ObjectInfoDependencyOverridesFND.cpp',
	'fileNodeData/ObjectInfoDependencyOverridesFND.h',
	'fileNodeData/ObjectRevisionWithRefCount2FNDX.cpp',
	'fileNodeData/ObjectRevisionWithRefCount2FNDX.h',
	'fileNodeData/ObjectRevisionWithRefCountFNDX.cpp',
	'fileNodeData/ObjectRevisionWithRefCountFNDX.h',
	'fileNodeData/ObjectSpaceManifestListReferenceFND.cpp',
	'fileNodeData/ObjectSpaceManifestListReferenceFND.h',
	'fileNodeData/ObjectSpaceManifestListStartFND.cpp',
	'fileNodeData/ObjectSpaceManifestListStartFND.h',
	'fileNodeData/ObjectSpaceManifestRootFND.cpp',
	'fileNodeData/ObjectSpaceManifestRootFND.h',
	'fileNodeData/ReadOnlyObjectDeclaration2LargeRefCountFND.cpp',
	'fileNodeData/ReadOnlyObjectDeclaration2LargeRefCountFND.h',
	'fileNodeData/ReadOnlyObjectDeclaration2RefCountFND.cpp',
	'fileNodeData/ReadOnlyObjectDeclaration2RefCountFND.h',
	'fileNodeData/RevisionManifestListReferenceFND.cpp',
	'fileNodeData/RevisionManifestListReferenceFND.h',
	'fileNodeData/RevisionManifestListStartFND.cpp',
	'fileNodeData/RevisionManifestListStartFND.h',
	'fileNodeData/RevisionManifestStart4FND.cpp',
	'fileNodeData/RevisionManifestStart4FND.h',
	'fileNodeData/RevisionManifestStart6FND.cpp',
	'fileNodeData/RevisionManifestStart6FND.h',
	'fileNodeData/RevisionManifestStart7FND.cpp',
	'fileNodeData/RevisionManifestStart7FND.h',
	'fileNodeData/RevisionRoleAndContextDeclarationFND.cpp',
	'fileNodeData/RevisionRoleAndContextDeclarationFND.h',
	'fileNodeData/RevisionRoleDeclarationFND.cpp',
	'fileNodeData/RevisionRoleDeclarationFND.h',
	'fileNodeData/RootObjectReference2FNDX.cpp',
	'fileNodeData/RootObjectReference2FNDX.h',
	'fileNodeData/RootObjectReference3FND.cpp',
	'fileNodeData/RootObjectReference3FND.h',


]

libone_source_dependencies = [
    librevenge_dep,
    librevenge_stream_dep,
    librevenge_generators_dep
]

libone_include_directory = '../../inc/'

libone_target = library(
  'one',
  libone_source_files,
  version : meson.project_version(),
  install : true,
  dependencies : libone_source_dependencies,
  c_args : build_args,
  cpp_args : build_args,
  gnu_symbol_visibility : 'default',
  include_directories : libone_include_directory,
)

subdir('fileNodeData')

## vim:set shiftwidth=4 tabstop=4 noexpandtab:
