libone_source_files += files(
    'IFileNodeData.h',
    'IFileNodeData.cpp',
    'DataSignatureGroupDefinitionFND.h',
    'DataSignatureGroupDefinitionFND.cpp',
    'FileDataStoreListReferenceFND.h',
    'FileDataStoreListReferenceFND.cpp',
    'FileDataStoreObjectReferenceFND.h',
    'FileDataStoreObjectReferenceFND.cpp',
    'GlobalIdTableEntry2FNDX.h',
    'GlobalIdTableEntry2FNDX.cpp',
    'GlobalIdTableEntry3FNDX.h',
    'GlobalIdTableEntry3FNDX.cpp',
    'GlobalIdTableEntryFNDX.h',
    'GlobalIdTableEntryFNDX.cpp',
    'GlobalIdTableStartFNDX.h',
    'GlobalIdTableStartFNDX.cpp',
    'HashedChunkDescriptor2FND.h',
    'HashedChunkDescriptor2FND.cpp',
    'ObjectDataEncryptionKeyV2FNDX.h',
    'ObjectDataEncryptionKeyV2FNDX.cpp',
    'ObjectDeclaration2LargeRefCountFND.h',
    'ObjectDeclaration2LargeRefCountFND.cpp',
    'ObjectDeclaration2RefCountFND.h',
    'ObjectDeclaration2RefCountFND.cpp',
    'ObjectDeclarationFileData3LargeRefCountFND.h',
    'ObjectDeclarationFileData3LargeRefCountFND.cpp',
    'ObjectDeclarationFileData3RefCountFND.h',
    'ObjectDeclarationFileData3RefCountFND.cpp',
    'ObjectDeclarationWithRefCount2FNDX.h',
    'ObjectDeclarationWithRefCount2FNDX.cpp',
    'ObjectDeclarationWithRefCountFNDX.h',
    'ObjectDeclarationWithRefCountFNDX.cpp',
    'ObjectGroupListReferenceFND.h',
    'ObjectGroupListReferenceFND.cpp',
    'ObjectGroupStartFND.h',
    'ObjectGroupStartFND.cpp',
    'ObjectInfoDependencyOverridesFND.h',
    'ObjectInfoDependencyOverridesFND.cpp',
    'ObjectRevisionWithRefCount2FNDX.h',
    'ObjectRevisionWithRefCount2FNDX.cpp',
    'ObjectRevisionWithRefCountFNDX.h',
    'ObjectRevisionWithRefCountFNDX.cpp',
    'ObjectSpaceManifestListReferenceFND.h',
    'ObjectSpaceManifestListReferenceFND.cpp',
    'ObjectSpaceManifestListStartFND.h',
    'ObjectSpaceManifestListStartFND.cpp',
    'ObjectSpaceManifestRootFND.h',
    'ObjectSpaceManifestRootFND.cpp',
    'ReadOnlyObjectDeclaration2LargeRefCountFND.h',
    'ReadOnlyObjectDeclaration2LargeRefCountFND.cpp',
    'ReadOnlyObjectDeclaration2RefCountFND.h',
    'ReadOnlyObjectDeclaration2RefCountFND.cpp',
    'RevisionManifestListReferenceFND.h',
    'RevisionManifestListReferenceFND.cpp',
    'RevisionManifestListStartFND.h',
    'RevisionManifestListStartFND.cpp',
    'RevisionManifestStart4FND.h',
    'RevisionManifestStart4FND.cpp',
    'RevisionManifestStart6FND.h',
    'RevisionManifestStart6FND.cpp',
    'RevisionManifestStart7FND.h',
    'RevisionManifestStart7FND.cpp',
    'RevisionRoleAndContextDeclarationFND.h',
    'RevisionRoleAndContextDeclarationFND.cpp',
    'RevisionRoleDeclarationFND.h',
    'RevisionRoleDeclarationFND.cpp',
    'RootObjectReference2FNDX.h',
    'RootObjectReference2FNDX.cpp',
    'RootObjectReference3FND.h',
    'RootObjectReference3FND.cpp',
)
